@@ -1,3 +1,7 @@
+Sat Aug 11 20:58:02 CEST 2007 Christian Anthon <anthon@kiku.dk>
+
+	* play.c, gtkboard.c: update deprecated gtk_timeout*
+
 Sat Aug 11 20:26:54 CEST 2007 Christian Anthon <anthon@kiku.dk>
 
 	* board3d/fun3d.h, board3d/misc3d.c: make export position png work
